[package]
name = "altaria"
version = "0.3.5"
edition = "2021"

description = "Altaria is an asynchronous, memory-safe, blazingly fast HTTP server written in Rust. It currently supports HTTP1.1 parsing and encoding and HTTP2 parsing."
authors = ["Gabriel <gabriel@minatel.dev>"]
license-file = "LICENSE"
homepage = "https://github.com/SrGaabriel/altaria"
repository = "https://github.com/SrGaabriel/altaria"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.83"
chrono = "0.4.38"
hpack = "0.3.0"
anyhow = "1.0.94"
thiserror = "2.0.4"
paste = "1.0.15"
futures = "0.3.31"
serde = { version = "1.0.216", features = ["derive"], optional = true }
serde_json = { version = "1.0.74", optional = true }

[features]
json = ["serde", "serde_json"]