[package]
name = "altaria"
version = "0.4.2"
edition = "2021"

description = "Altaria is an asynchronous, memory-safe, blazingly fast HTTP server written in Rust. It currently supports HTTP1.1 parsing and encoding and HTTP2 parsing."
authors = ["Gabriel <gabriel@minatel.dev>"]
license-file = "LICENSE"
homepage = "https://github.com/SrGaabriel/altaria"
repository = "https://github.com/SrGaabriel/altaria"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.83"
chrono = { version="0.4.38", default-features = false, features = ["clock"] }
anyhow = "1.0.94"
thiserror = "2.0.4"
paste = "1.0.15"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
serde = { version = "1.0.216", features = ["derive"], optional = true, default-features = false }
serde_json = { version = "1.0.74", optional = true, default-features = false }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

altaria-macros = { path = "macros", optional = true }

[features]
default = ["macros"]
macros = ["altaria-macros"]
json = ["serde", "serde_json"]
logging = ["tracing", "tracing-subscriber"]